Builder utility for the AsyncCollectionReader, DataReader support